--- a/apps/importer/style/style.css
+++ b/apps/importer/style/style.css
@@ -1,3 +1,7 @@
+.hide {
+  display: none !important;
+}
+
 html, body {
   margin: 0;
   padding: 0;
@@ -65,69 +69,94 @@ body[role="application"] button.affirmative, body[role="application"] a.affirmat
     border-color: #00ACCE;
 }
 
-/* -----------------------------------
- * STATUS
- * ----------------------------------- */
+/* ----------------------------------
+* PROGRESS + ACTIVITIES
+* ---------------------------------- */
+
+/* Activity indicator */
  body[role="application"] progress:not([value]) {
-    animation: 1s steps(10, end) 0s no...ne infinite moveDefault;
-    background: url("images/ui/default.png") no-repeat scroll left top transparent
-    border: medium none;
-    display: inline-block;
-    height: 2.9rem;
-    vertical-align: middle;
-    width: 2.9rem;
+   width: 2.9rem;
+   height: 2.9rem;
+   background: url(images/ui/default.png) no-repeat left top;
+   border: none;
+   animation: 1s moveDefault infinite steps(10);
+   display: inline-block;
+   vertical-align: middle;
+ }
+
+ body[role="application"] progress:not([value])::-moz-progress-bar {
+   background: none;
+ }
+
+body[role="application"] progress:not([value])[data-theme="dark"],
+body[role="application"] p[role="status"][data-theme="dark"] progress:not([value]) {
+  background-image: url(images/ui/dark/default.png);
 }
 
-body[role="application"] progress:not([value])::-moz-progress-bar {
-    background: none repeat scroll 0 0 transparent;
+body[role="application"] progress:not([value]).spinner {
+  background-image: url(images/ui/spinner.png);
+   animation: 1s moveSpinner infinite steps(12);
+   width: 1.6rem;
+   height: 1.6rem;
 }
 
-body[role="application"] progress[data-theme="dark"]:not([value]), body[role="application"] p[role="status"][data-theme="dark"] progress:not([value]) {
-    background-image: url("images/ui/dark/default.png");
-}
-
-body[role="application"] progress.spinner:not([value]) {
-    animation: 1s steps(12, end) 0s no...ne infinite moveSpinner;
-    background-image: url("images/ui/spinner.png");
-    height: 1.6rem;
-    width: 1.6rem;
-}
-
+/* Progress bar */
 body[role="application"] progress[value] {
-    background: none repeat scroll 0 0 #838990;
-    border: medium none;
-    display: block;
-    height: 0.5rem;
-    width: 100%;
-}
+   width: 100%;
+   background: #838990;
+   border: none;
+   height: 0.5rem;
+   display: block;
+ }
 
 body[role="application"] progress[value]::-moz-progress-bar {
-    background: none repeat scroll 0 0 #01C5ED;
-}
+   background: #01c5ed;
+ }
 
+/* Labels */
 body[role="application"] p[role="status"] {
-    font: 600 1.3rem/1em "Open Sans",Sans-serif;
-    padding: 0.5rem;
+  padding: 0.5rem;
+  font: 600 1.3rem/1em "Open Sans", Sans-serif;
 }
 
 body[role="application"] p[role="status"] progress:not([value]) {
-    margin-right: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 body[role="application"] p[role="status"] progress:not([value]) + span {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 body[role="application"] p[role="status"] span {
-    display: inline-block;
-    margin-bottom: 0.5rem;
-    vertical-align: middle;
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: 0.5rem;
 }
 
 body[role="application"] p[role="status"][data-theme="dark"] {
-    background: none repeat scroll 0 0 #555D65;
-    color: #FFFFFF;
+  background: #555d65;
+  color: #fff;
 }
+
+@keyframes moveDefault {
+  from {
+    background-position: 0 top;
+  }
+  
+  to {
+    background-position: -390px top;
+  }
+}
+
+@keyframes moveSpinner {
+  from {
+    background-position: 0 top;
+  }
+
+  to {
+    background-position: -300px top;
+  }
+} 
 
 
 /* ----------------------------------
@@ -450,268 +479,293 @@ section[role="region"].skin-dark > header,
   color: #c5c5c5;
 }
 
-/* Lists */
+/* ----------------------------------
+* LISTS: default
+* ---------------------------------- */
 body[role="application"] ul, body[role="application"] ol {
-    font-family: "Open Sans",Sans-serif;
-    list-style: none outside none;
-    margin: 0;
-    overflow: hidden;
-    padding: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  font-family: "Open Sans", Sans-serif;
 }
+
 body[role="application"] li {
-    -moz-border-bottom-colors: none;
-    -moz-border-left-colors: none;
-    -moz-border-right-colors: none;
-    -moz-border-top-colors: none;
-    -moz-box-sizing: border-box;
-    border-color: #DBD9D9 -moz-use-text-color;
-    border-image: none;
-    border-style: solid none;
-    border-width: 1px medium;
-    display: inline-block;
-    margin: -1px 0 0;
-    position: relative;
-    transition: transform 0.3s ease 0s;
-    width: 100%;
+  display: inline-block;
+  width: 100%;
+  -moz-box-sizing: border-box;
+  transition: transform 0.3s ease;
+  border: solid 1px #dbd9d9;
+  border-right: none;
+  border-left: none;
+  margin: -1px 0 0;
+  position: relative;
 }
-body[role="application"] li > a:first-of-type, body[role="application"] li > a:first-of-type {
-    color: #000000;
-    display: inline-block;
-    position: relative;
-    text-decoration: none;
-    width: 100%;
+
+body[role="application"] li > a:first-of-type,
+body[role="application"] li > a:first-of-type {
+  text-decoration: none;
+  color: #000;
+  display: inline-block;
+  width: 100%;
+  position: relative;
 }
+
+/* State press */
 body[role="application"] li > a:first-of-type:after {
-    background-color: #B1F1FF;
-    bottom: 0;
-    content: "";
-    left: 0;
-    opacity: 0;
-    pointer-events: none;
-    position: absolute;
-    right: 0;
-    top: 0;
-    transition: opacity 0.2s ease 0s;
-    z-index: 100;
+  content: "";
+  transition: opacity 0.2s ease;
+  background-color: #b1f1ff;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  pointer-events: none;
+  opacity: 0;
 }
+
 body[role="application"] li > a:first-of-type:active:after {
-    opacity: 0.6;
+  opacity: 0.6;
 }
+
 body[role="application"] li .aside {
-    display: inline;
-    float: left;
-    height: 6rem;
-    position: relative;
-    text-align: center;
-    width: 5.5rem;
+  float: left;
+  display: inline;
+  position: relative;
+  width: 5.5rem;
+  height: 6rem;
+  text-align: center;
 }
+
 body[role="application"] li .aside.end {
-    float: right;
+  float: right;
 }
+
 body[role="application"] li .aside:before {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    margin-left: -1px;
-    vertical-align: middle;
-    width: 1px;
+  content: "";
+  height: 100%;
+  width: 1px;
+  margin-left: -1px;
+  display: inline-block;
+  vertical-align: middle;
 }
+
 body[role="application"] li .aside time {
-    display: inline-block;
-    font: 1.1rem/1em "Open Sans",Sans-serif;
-    padding-right: 1rem;
-    text-align: right;
-    text-transform: uppercase;
-    vertical-align: super;
-    width: 4rem;
+  display: inline-block;
+  vertical-align: super;
+  width: 4rem;
+  padding-right: 1rem;
+  font: 1.1rem/1em "Open Sans", Sans-serif;
+  text-transform: uppercase;
+  text-align: right;
 }
+
 body[role="application"] li img {
-    background-attachment: scroll;
-    background-clip: border-box;
-    background-color: transparent;
-    background-image: none;
-    background-origin: padding-box;
-    background-position: center center;
-    background-repeat: repeat;
-    background-size: 100% auto;
-    display: inline;
-    float: right;
-    height: 6rem;
-    width: 6rem;
+  float: right;
+  display: inline;
+  width: 6rem;
+  height: 6rem;
+  background: transparent center center;
+  background-size: 100% auto;
 }
+
 body[role="application"] li dl {
-    display: block;
-    overflow: hidden;
-    padding: 1rem 0.5rem 0 2rem;
+  display: block;
+  overflow: hidden;
+  padding: 1rem 0.5rem 0 2rem;
 }
+
 body[role="application"] li .aside ~ dl {
-    padding-left: 0.5rem;
+  padding-left: 0.5rem;
 }
+
 body[role="application"] li dl dt {
-    font: 1.8rem/1.2em "Open Sans",Sans-serif;
-    height: 2.2rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  font: 1.8rem/1.2em "Open Sans", Sans-serif;
+  white-space: nowrap;
+  height: 2.2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
 body[role="application"] li dl dt strong {
-    font-family: "Open Sans",Sans-serif;
-    font-weight: 600;
+  font-weight: 600;
+  font-family: "Open Sans", Sans-serif;
 }
+
 body[role="application"] li dl dt em {
-    font-size: 1.3rem;
-    font-style: normal;
+  font-size: 1.3rem;
+  font-style: normal;
 }
+
 body[role="application"] li dl mark {
-    background-color: #CFD3D7;
+  background-color: #cfd3d7;
 }
+
 body[role="application"] li dl dd {
-    color: #5B5B5B;
-    font-size: 1.4rem;
-    height: 1.8rem;
-    margin: 0;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  font-size: 1.4rem;
+  color: #5b5b5b;
+  white-space: nowrap;
+  height: 1.8rem;
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
 body[role="application"] li dl dd strong {
-    color: #000000;
-    font-family: "Open Sans",Sans-serif;
-    font-weight: 600;
+  font-weight: 600;
+  font-family: "Open Sans", Sans-serif;
+  color: #000;
 }
+
 body[role="application"] li dl dd time {
-    color: #5B5B5B;
-    font-size: 1.4rem;
-    margin-right: 0.3rem;
+  font-size: 1.4rem;
+  color: #5b5b5b;
+  margin-right: 0.3rem;
 }
+
 body[role="application"] li dl dd span {
-    margin-right: 0.3rem;
+  margin-right: 0.3rem;
 }
+
 body[role="application"] li dl dd span:last-child {
-    margin: 0;
+  margin: 0;
 }
+
+/* Icon definitions */
 body[role="application"] li .icon {
-    background-attachment: scroll;
-    background-clip: border-box;
-    background-color: transparent;
-    background-image: none;
-    background-origin: padding-box;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    display: inline-block;
-    font: 0px/0 a;
-    height: 3rem;
-    overflow: hidden;
-    position: relative;
-    vertical-align: middle;
-    width: 3rem;
+  display: inline-block;
+  vertical-align: middle;
+  width: 3rem;
+  height: 3rem;
+  background: transparent no-repeat center center;
+  background-size: 100% auto;
+  font: 0/0 a;
+  overflow: hidden;
+  position: relative;
 }
+
 body[role="application"] li .icon.icon-arrowaction {
-    background-image: url("images/icons/arrowaction.png");
-    height: 1rem;
-    margin: 0 -3rem 0.5rem 0;
-    vertical-align: bottom;
-    width: 1rem;
+  background-image: url(images/icons/arrowaction.png);
+  width:1rem;
+  height: 1rem;
+  vertical-align: bottom;
+  margin: 0 -3rem 0.5rem 0;
 }
+
 body[role="application"] li .icon.icon-callout {
-    background-image: url("images/icons/callout.png");
-    height: 2rem;
-    width: 2.4rem;
+  background-image: url(images/icons/callout.png);
+  width: 2.4rem;
+  height: 2rem;
 }
+
 body[role="application"] li .icon.icon-smsin {
-    background-image: url("images/icons/smsin.png");
-    height: 2.2rem;
-    width: 2.5rem;
+  background-image: url(images/icons/smsin.png);
+  width: 2.5rem;
+  height: 2.2rem;
 }
+
 body[role="application"] li[data-state="new"] .icon.icon-smsin {
-    background-image: url("images/icons/smsin-new.png");
-    height: 2.2rem;
-    width: 2.5rem;
+  background-image: url(images/icons/smsin-new.png);
+  width: 2.5rem;
+  height: 2.2rem;
 }
-body[role="application"] ul[data-state="edit"] li, body[role="application"] ol[data-state="edit"] li {
-    transform: translateX(5rem);
+
+/* State edit*/
+body[role="application"] ul[data-state="edit"] li,
+body[role="application"] ol[data-state="edit"] li {
+  transform: translateX(5rem);
 }
-body[role="application"] ul[data-state="edit"] li > label.check, body[role="application"] ol[data-state="edit"] li > label.check {
-    opacity: 1;
+
+body[role="application"] ul[data-state="edit"] li > label.check,
+body[role="application"] ol[data-state="edit"] li > label.check {
+   opacity: 1;
 }
+
 body[role="application"] li > label.check {
-    -moz-border-bottom-colors: none;
-    -moz-border-left-colors: none;
-    -moz-border-right-colors: none;
-    -moz-border-top-colors: none;
-    border-color: #DBD9D9 -moz-use-text-color;
-    border-image: none;
-    border-style: solid none;
-    border-width: 1px medium;
-    height: 6rem;
-    opacity: 0;
-    position: absolute;
-    right: 100%;
-    top: -1px;
-    transition: opacity 0.6s ease 0s;
-    width: 5rem;
-    z-index: 100;
+  transition: opacity 0.6s ease;
+  width: 5rem;
+  height: 6rem;
+  right: 100%;
+  position: absolute;
+  top: -1px;
+  z-index: 100;
+  opacity: 0;
+  border: solid 1px #DBD9D9;
+  border-left: none;
+  border-right: none;
 }
+
+/* State disabled */
 body[role="application"] li[aria-disabled="true"]:before {
-    background-color: #E6E6E6;
-    bottom: 0;
-    content: "";
-    left: 0;
-    opacity: 0.7;
-    position: absolute;
-    right: 0;
-    top: 0;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #e6e6e6;
+  opacity: 0.7;
 }
+
 body[role="application"] li[aria-disabled="true"] {
-    pointer-events: none;
+  pointer-events:none;
 }
+
+/* State new */
 body[role="application"] li[data-state="marked"]:before {
-    background-attachment: scroll;
-    background-clip: border-box;
-    background-color: transparent;
-    background-image: url("images/icons/dot.png");
-    background-origin: padding-box;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    content: "";
-    height: 0.9rem;
-    left: 0;
-    margin-left: 0.5rem;
-    position: absolute;
-    top: 1.6rem;
-    width: 0.9rem;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 1.6rem;
+  width: 0.9rem;
+  height: 0.9rem;
+  margin-left: 0.5rem;
+  background: url(images/icons/dot.png) no-repeat center;
+  background-size: 100% auto;
 }
+
 body[role="application"] li[data-state="new"] time {
-    color: #52B6CC !important;
+  color: #52b6cc !important;
 }
+
+/* State tagged */
 body[role="application"] li[data-state="tagged"]:after {
-    bottom: 0;
-    content: "";
-    left: 0;
-    position: absolute;
-    top: -1px;
-    width: 0.4rem;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -1px;
+  bottom: 0;
+  width: 0.4rem;
 }
-body[role="application"] li[data-tag="A"]:after {
-    background-color: #E7A300;
+
+body[role="application"] li[data-tag="A"]:after { background-color: #e7a300; }
+body[role="application"] li[data-tag="B"]:after { background-color: #954fa7; }
+
+
+/* ----------------------------------
+* LISTS: Overlay theme
+* ---------------------------------- */
+body[role="application"] ul.overlay li,
+body[role="application"] ol.overlay li {
+  border-top-color: rgba(255, 255, 255, 0.1);
+  border-bottom-color: rgba(0, 0, 0, 0.6);
 }
-body[role="application"] li[data-tag="B"]:after {
-    background-color: #954FA7;
+
+body[role="application"] ul.overlay li dl dt,
+body[role="application"] ol.overlay li dl dt {
+  color: #fff;
 }
-body[role="application"] ul.overlay li, body[role="application"] ol.overlay li {
-    border-bottom-color: rgba(0, 0, 0, 0.6);
-    border-top-color: rgba(255, 255, 255, 0.1);
+
+body[role="application"] ul.overlay li dl dd,
+body[role="application"] ol.overlay li dl dd {
+  color: #ccc;
 }
-body[role="application"] ul.overlay li dl dt, body[role="application"] ol.overlay li dl dt {
-    color: #FFFFFF;
-}
-body[role="application"] ul.overlay li dl dd, body[role="application"] ol.overlay li dl dd {
-    color: #CCCCCC;
-}
-body[role="application"] ul.overlay .icon.icon-smsin, body[role="application"] ol.overlay .icon.icon-smsin {
-    background-image: url("images/icons/smsin-overlay.png");
-    height: 3.1rem;
-    width: 3.1rem;
+
+body[role="application"] ul.overlay .icon.icon-smsin,
+body[role="application"] ol.overlay .icon.icon-smsin {
+  background-image: url(images/icons/smsin-overlay.png);
+  width: 3.1rem;
+  height: 3.1rem;
 }
