--- a/apps/communications/ftu/css/fb_extensions.css
+++ b/apps/communications/ftu/css/fb_extensions.css
@@ -20,14 +20,18 @@ iframe#fb-extensions {
   -moz-transform: translateY(0);
 }
 
-#fb-extensions.openingImport {
-  top:0;
+#fb-extensions[data-anim-from = 'left'] {
+  top: 0;
+  left: 100%;
 }
 
-#fb-extensions.closingImport {
-  top: -100%;
+#fb-extensions[data-anim-from = 'left'].opening {
+  -moz-transform: translateX(-100%);
 }
 
+#fb-extensions[data-anim-from = 'left'].closing {
+  -moz-transform: translateX(0);
+}
 
 .facebook.removed dl,
 p.facebook.removed input {
