--- a/apps/communications/ftu/css/style.css
+++ b/apps/communications/ftu/css/style.css
@@ -7,7 +7,6 @@ html, body {
 	font-size: 10px;
 	font-family: "Open Sans",sans-serif;
 	font-weight: 400;
-	-ms-user-select: none;
 	user-select: none;
 }
 
@@ -38,9 +37,9 @@ html, body {
 }
 
 [role=main] > [role=region] {
-	background: url(images/BG_Top.png) top left no-repeat,
+	background: url(images/bgtop.png) top left no-repeat,
 							url(images/bg_1px.png) repeat-y,
-							url(images/BG_Bottom.png) bottom left no-repeat;
+							url(images/bgbottom.png) bottom left no-repeat;
 }
 
 [role=region]:target {
@@ -167,7 +166,7 @@ progress[value='100'] {
 	opacity: 0;
 	z-index: 3000;
 	transition: all 1s ease;
-	background-image: url(images/powered.png) !important;
+	background-image: url(images/powered.png);
 }
 
 #splash.show {
@@ -201,7 +200,7 @@ progress[value='100'] {
 */
 
 #languages {	
-	background-image: url(images/BG_Language_Bubbles.png);
+	background-image: url(images/bgbubbles.png);
 	background-repeat: no-repeat;
 }
 
@@ -382,7 +381,7 @@ progress[value='100'] {
 }
 
 #time_zone_map {
-	background-image: url('images/mapa.png') ;
+	background-image: url('images/map.png') ;
 	background-position: bottom;
 	background-repeat: no-repeat;
 	position: relative;
